--- a/index.html
+++ b/index.html
@@ -1,12 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>npm</title>
 </head>
 <body>
-  <!-- Your code goes here -->
+  <nav>
+    <div class="top-left">
+      <a class=logo href="#">♥︎</a>
+      <span class="acronym"> Neophobe Plebeian Mumpsimus</span>
+    </div>
+      <ul class="top-links">
+        <li><a href="#">npm enterprise</a></li>
+        <li><a href="#">features</a></li>
+        <li><a href="#">pricing</a></li>
+        <li><a href="#">documentation</a></li>
+        <li><a href="#">support</a></li>
+      </ul>
+  </nav>
+  <header>
+    <div class="search-bar">
+      <img id="logo" src="images/npm-logo.png" alt="logo" width="80px">
+      <input type="text" placeholder="Find Packages">
+      <input type="submit" value="Send" id="search-submit">
+      <p>Sign up or Login </p>
+      <img id="bear" src="images/bear-logo.png" alt="bearlogo" width="50px">
+    </div>
+    <div class="cityscape">
+    <h3> Build Amazing things</h3>
+    <p>npm is the package manager for Javascript and World's largest software registry. Discover packages of resuable code - and <br>assemble them in powerful new ways</p>
+    <a href="#">Sign up for npm</a>
+    </div>
+  </header>
+  <section class="colab">
+    <h3>npm Orgs is powerful <br>
+      collaboration -- for free</h3>
+    <ul>
+      <li>encourage code discovery and re-use with teams</li>
+      <li>Publish and control access to your own namespace</li>
+      <li>Manage public and private code with the same workflow</li>
+    </ul>
+    <a href="#" id="sign"> Sign up for Orgs</a>
+    <p>or <a href="#">learn more about Orgs</a></p>
+  </section>
+  <img id="fork" src="images/forklift.svg" alt="bear forklift">
+  <section class="info">
+    <div class="infotext">
+    <h3>What is npm?</h3>
+    <p>Use npm to instal, share, and distribute code;<br> manage dependencies in your projects; and <br> share & receive feedback with others.</p>
+    <a href="#">Instal npm</a>
+    </div>
+  </section>
+  <section class="packages">
+    <div class="packageshead">
+    <h3>What can you make with 475,000 building blocks?</h3>
+    <p>The npm registry hosts almost half a million packages of free, reusable code - the largest software registry in the world.</p>
+    </div>
+    <div class="packagetools">
+    <div class=tools>
+      <img src="images/binoculars.svg" alt="binoculars">
+      <h5>Find</h5>
+      <p>Libraries like <a href="#">Jquery</a>, <a href="#">Bootstrap</a>,<br> <a href="#">React</a> and <a href="#">Angular</a>, and <br> components from frameworks <br> such as Ember.</p>
+    </div>
+    <div class=tools>
+        <img src="images/mountain-flag.svg" alt="mountain">
+        <h5>Discover</h5>
+        <p>Packages for mobile, IoT, front <br> end, back end, robotics...<br> Everything you need to start <br>building amazing things.</p>
+    </div>
+    <div class=tools>
+        <img src="images/backpack.svg" alt="backpack">
+        <h5>Build</h5>
+        <p>Assemble packages like building<br> to quickly develop <br>awesome new projects</p>
+    </div>
+    </div>  
+  </section>
+
 </body>
 </html>
